<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.blueriver</groupId>
  <artifactId>RotasWebApp</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Rotas Web Application</name>
  <url>http://maven.apache.org</url>
  
	<properties>
		<jdk.version>1.7</jdk.version>
		<spring.version>4.3.1.RELEASE</spring.version>
		<spring.security.version>3.2.3.RELEASE</spring.security.version>
		<jstl.version>1.2</jstl.version>
		<javax.servlet.version>3.1.0</javax.servlet.version>
		<jackson.version>1.9.10</jackson.version>
		<heroku.app.name>rotastaxi</heroku.app.name>
		<jee.version>7.0</jee.version>
		<postgresql.version>9.4.1207</postgresql.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
	</properties>

  <dependencies>
        <!-- PostGreSQL dependency -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
  			<!-- <version>9.4.1208.jre7</version>  -->
			<version>${postgresql.version}</version>
		</dependency>
		
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.servlet.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>jstl</artifactId>
		    <version>${jstl.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-test</artifactId>
		    <version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
    
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        
        <dependency>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest-library</artifactId>
          <version>1.3</version>
          <scope>test</scope>
        </dependency>
        
        <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-all</artifactId>
          <version>1.9.5</version>
        </dependency>
        
        <dependency>
	      <groupId>com.jayway.jsonpath</groupId>
	      <artifactId>json-path</artifactId>
	      <version>2.2.0</version>
	      <scope>test</scope>
	    </dependency>        
        
   	</dependencies>
   	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<warSourceDirectory>src/main/webapp</warSourceDirectory>
					<warName>RotasWebApp</warName>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			
            <plugin>
              <groupId>com.heroku.sdk</groupId>
              <artifactId>heroku-maven-plugin</artifactId>
              <version>0.4.1</version>
              <configuration>
                <appName>${heroku.app.name}</appName>
                <argLine>${argLine} -Xmx512m -XX:MaxPermSize=256m</argLine>
              </configuration>
            </plugin>
            
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-dependency-plugin</artifactId>
	            <version>2.3</version>
	            <executions>
	                <execution>
	                    <phase>package</phase>
	                    <goals><goal>copy</goal></goals>
	                    <configuration>
	                        <artifactItems>
	                            <artifactItem>
	                                <groupId>com.github.jsimone</groupId>
	                                <artifactId>webapp-runner</artifactId>
	                                <version>8.5.11.3</version>
	                                <destFileName>webapp-runner.jar</destFileName>
	                            </artifactItem>
	                        </artifactItems>
	                    </configuration>
	                </execution>
	            </executions>
	        </plugin>
			
		</plugins>
	</build>
</project>
